--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --border: rgba(76, 76, 76, 0.556);
   --primary: #f7c14c;
   --primary-foreground: #2b2417;
 }
@@ -13,6 +14,7 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --border: rgba(76, 76, 76, 0.556);
     --primary: #f7c14c;
     --primary-foreground: #2b2417;
   }
